--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <h2>
             Termiz – 2023 yil
         </h2>
-        <h3 class="opening open-1 ">
+        <div class="open-title">
+          <h3 class="opening open-1 ">
             Ilmiy ishning dolzarbligi: 
             <button type="button" class="question-btn">
                 <span class="plus-icon">
@@ -39,6 +40,7 @@
                   <i class="far fa-minus-square">-</i>
                 </span>
               </button>
+        </div>
         </h3>
         <div class="info-open info-text-1">
             Obyektlarni qurish, rekonstruksiya qilish, mukammal ta’mirlashda sifatni nazorat qilishning quyidagi turlari amalga oshiriladi : 
